--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
   },
   "dependencies": {
     "tslib": "2.3.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "@fluentui/react": "^8.106.4",
     "@microsoft/sp-core-library": "1.19.0",
     "@microsoft/sp-component-base": "1.19.0",
     "@microsoft/sp-property-pane": "1.19.0",
@@ -34,9 +31,7 @@
     "eslint": "8.7.0",
     "gulp": "4.0.2",
     "typescript": "4.7.4",
-    "@types/react": "17.0.45",
-    "@types/react-dom": "17.0.17",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "@microsoft/sp-module-interfaces": "1.20.1"
+    "@microsoft/sp-module-interfaces": "1.20.1",
+    "@fluentui/react": "^8.106.4"
   }
 }
